# DRAMPower

./: run_dram.sh
src/cli/: CMakeLists.txt  main.cpp
